<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:id="@+id/linearLayout">
        <TextView
            android:text="@string/choose_language"
            android:id="@+id/txtLang"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp" />
        <Spinner
            android:id="@+id/language_spinner"
            android:textColor="#ff4c4e4c"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:layout_toRightOf="@+id/txtLang" />
    </LinearLayout>

    <TextView
        android:text="@string/more_languages"
        android:id="@+id/txt_moreLanguages"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="12dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonAddTranslation"
        android:text="@string/btn_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_button"
        android:textColor="#fff"
        android:layout_below="@+id/txt_moreLanguages"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_activate"
        android:background="@drawable/green_button"
        android:textColor="#fff"
        android:id="@+id/btn_activate"
        android:layout_above="@+id/textDisclaimer"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textDisclaimer"
        android:text="@string/disclaimer"
        android:textSize="12dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
