<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#ffe0e0e0"
    tools:context=".MainActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        style="@style/tfa_content">

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:textSize="25dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </LinearLayout>




    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_no"
        android:id="@+id/button_no"
        android:layout_centerVertical="true"
        android:textColor="#fff"
        android:layout_marginRight="5dp"
        android:background="@drawable/red_button"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_yes"
        android:id="@+id/button_yes"
        android:layout_marginLeft="5dp"
        android:background="@drawable/green_button"
        android:textColor="#fff"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_action_refresh"
        android:id="@+id/button_refresh"
        android:layout_alignTop="@+id/button_no"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/questions_tooltip"
        android:id="@+id/textView"
        android:textSize="20dp"
        android:layout_below="@+id/button_refresh"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp" />


</RelativeLayout>